# pymizer

./: .gitignore  .nojekyll  404.html  README.md  ROADMAP.md  get-started.html  index.html  mkdocs.yml  news.html  objects.inv  pyproject.toml  roadmap.html  robots.txt  search.json  sitemap.xml
.github/workflows/: docs.yml  package.yml  test.yml
api/: CompatibilityReport.html  MizerParams.html  MizerREnvironment.html  MizerSim.html  NorthSeaExample.html  evaluate_versions.html  get_environment.html  index.html  list_datasets.html  load_dataset.html  load_north_sea.html  new_community_params.html  new_multispecies_params.html  new_single_species_params.html  read_params.html  read_rds.html  runtime_diagnostics.html  validate_interaction_matrix.html  validate_species_params.html
articles/: analysis-and-plotting.html  community-model.html  datasets.html  developer-guide.html  development-notes.html  north-sea-model.html
articles/analysis-and-plotting/: index.html
articles/community-model/: index.html
articles/datasets/: index.html
articles/north-sea-model/: index.html
docs/: _quarto.yml  get-started.md  index.md  news.md  roadmap.md
docs/articles/: analysis-and-plotting.md  community-model.md  community-model.qmd  datasets.md  developer-guide.md  development-notes.md  north-sea-model.md
docs/reference/: bridge.md  datasets.md  index.md  model.md
docs/stylesheets/: extra.css
examples/: community_model.py  north_sea.py  north_sea_analysis.py
get-started/: index.html
news/: index.html
reference/: bridge.html  datasets.html  index.html  model.html
reference/bridge/: index.html
reference/datasets/: index.html
reference/model/: index.html
roadmap/: index.html
search/: search_index.json
site_libs/bootstrap/: bootstrap-1fa7afb8afaaa382e9a0f875c6e0556d.min.css  bootstrap-3140c81cfcadec7f5ae217b4a52acd52.min.css
src/pymizer/: __init__.py  _bridge.py  _converters.py  _validation.py  datasets.py  model.py
tests/: test_api.py  test_bridge.py  test_converters.py  test_examples.py  test_failure_modes.py  test_validation.py
