[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "pymizer"
version = "0.1.0"
description = "Python wrappers for the mizer R package"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "mizer developers" }
]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.23",
    "pandas>=1.5",
    "rpy2>=3.5",
    "xarray>=2023.1.0",
]

[project.urls]
Homepage = "https://github.com/sizespectrum/mizer"

[project.optional-dependencies]
docs = [
    "ipykernel>=6",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "quartodoc>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pymizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that exercise the live R bridge",
]
