[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "pymizer"
version = "0.1.0"
description = "Python wrappers for the mizer R package"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "mizer developers" }
]
keywords = ["ecology", "fisheries", "marine", "mizer", "size-spectrum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: R",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.23",
    "packaging>=23",
    "pandas>=1.5",
    "rpy2>=3.5",
    "xarray>=2023.1.0",
]

[project.urls]
Homepage = "https://github.com/sizespectrum/mizer"
Documentation = "https://sizespectrum.github.io/pymizer/"
Issues = "https://github.com/sizespectrum/pymizer/issues"
Repository = "https://github.com/sizespectrum/pymizer"
Changelog = "https://sizespectrum.github.io/pymizer/news.html"

[project.optional-dependencies]
docs = [
    "ipykernel>=6",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "quartodoc>=0.11",
]
test = [
    "build>=1.2",
    "pytest>=8",
    "twine>=5",
]
dev = [
    "build>=1.2",
    "ipykernel>=6",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "pytest>=8",
    "quartodoc>=0.11",
    "twine>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pymizer"]

[tool.hatch.build.targets.sdist]
include = [
    "/.github",
    "/LICENSE",
    "/README.md",
    "/docs",
    "/examples",
    "/pyproject.toml",
    "/src",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that exercise the live R bridge",
]
